minor changes to README, added base license

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 There are some great kits out there - the Makerbot, the Ultimaker, the Prusa Mendel, and others - but none as small and simple as the Printrbot.  
 
 This all-in-one 3D printer kit can be assembled and printing in a couple of hours. Other kits will not only take you many more hours to build, they will also have hundreds more parts, and they will cost more. This design also does away with the finicky calibration and adjustment from which most 3D printers suffer. This is the printer a kid could put together.
+
+This work is licensed under a Creative Commons Attribution-Share Alike 3.0 Unported License: http://creativecommons.org/licenses/by-sa/3.0/
