--- a/README
+++ b/README
@@ -2,4 +2,19 @@ There are some great kits out there - the Makerbot, the Ultimaker, the Prusa Men
 
 This all-in-one 3D printer kit can be assembled and printing in a couple of hours. Other kits will not only take you many more hours to build, they will also have hundreds more parts, and they will cost more. This design also does away with the finicky calibration and adjustment from which most 3D printers suffer. This is the printer a kid could put together.
 
+PRINTED PARTS
+2 Bases
+1 X Motor
+1 X Idler
+1 X Carriage
+1 Xtruder Mount
+4 Y BarEnds
+2 Belt Clips
+1 Y Bearing Guide
+
+OTHER PRINTED PARTS
+2	Z Couplers
+2	Belt Pulleys (we use XL belt)
+1	Extruder/hot end assembly (We use Wades Accessible and Herringbone gears
+
 This work is licensed under a Creative Commons Attribution-Share Alike 3.0 Unported License: http://creativecommons.org/licenses/by-sa/3.0/
